# CIRE2022

./: .gitignore  LICENSE  README.md
Diapositivas/: .gitignore  Etapa02.bbl  Etapa02.blg  Etapa02.tex  Etapa04.tex  References.bib
Diapositivas/Figures/: AngularSpeed.eps  LinearSpeed.eps  ParadigmHierarchical.drawio  ParadigmHybrid.drawio  ParadigmReactive.drawio  PathSmoothing.drawio  RobotComponents.drawio  RoboticsAreas  RosGraph.drawio  SpeedWithProfile.eps  SpeedWithoutProfile.eps
catkin_ws/: .gitignore
catkin_ws/src/bring_up/: CMakeLists.txt  package.xml
catkin_ws/src/bring_up/launch/: moon_world.launch  stage02.launch  stage02_with_metapublisher.launch  stage03.launch  stage04.launch  stage04_localization.launch  stage04_mapping.launch  stage04_path_planning.launch  stage05.launch
catkin_ws/src/bring_up/maps/: moon_station.yaml
catkin_ws/src/bring_up/rviz/: mapping.rviz  navigation.rviz
catkin_ws/src/bring_up/worlds/: moon_station.world  moon_station_stage3.world  moon_stones.world
catkin_ws/src/exercises/: CMakeLists.txt  package.xml
catkin_ws/src/exercises/scripts/: .gitignore  a_star.py  cost_map.py  exercise01.py  exercise02.py  map_inflation.py  path_following.py  path_smoothing.py  pot_fields.py  smach_competencia_template.py  smach_evasion1.py  utils_evasion.py
catkin_ws/src/exercises/src/: particle_filter.cpp
catkin_ws/src/hsrb_moveit-v0.6.0-community/: LICENCE.txt
catkin_ws/src/hsrb_moveit-v0.6.0-community/hsrb_moveit/: CHANGELOG.rst  CMakeLists.txt  package.xml
catkin_ws/src/hsrb_moveit-v0.6.0-community/hsrb_moveit_config/: CHANGELOG.rst  CMakeLists.txt  README.rst  package.xml
catkin_ws/src/hsrb_moveit-v0.6.0-community/hsrb_moveit_config/config/: fake_controllers.yaml  hsrb.srdf  hsrb_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  sensors_xtion.yaml
catkin_ws/src/hsrb_moveit-v0.6.0-community/hsrb_moveit_config/launch/: default_warehouse_db.launch  demo.launch  demo_with_controller.launch  fake_moveit_controller_manager.launch.xml  hsrb_demo.launch  hsrb_demo_with_controller.launch  hsrb_moveit_controller_manager.launch.xml  hsrb_moveit_sensor_manager.launch.xml  hsrc_demo.launch  hsrc_demo_with_controller.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
catkin_ws/src/hsrb_moveit-v0.6.0-community/hsrb_moveit_config/scripts/: moveit_attached_object_demo.py  moveit_cartesian_demo.py  moveit_constraints_demo.py  moveit_fk_demo.py  moveit_gripper_demo.py  moveit_gripper_demo_backup.py  moveit_ik_demo.py  moveit_obstacles_demo.py  moveit_obstacles_demo_takeshi.py  moveit_obstacles_demo_takeshi_backup.py  moveit_pick_and_place_demo.py  moveit_speed_demo.py
catkin_ws/src/hsrb_moveit-v0.6.0-community/hsrb_moveit_plugins/: CHANGELOG.rst  CMakeLists.txt  hsrb_moveit_controller_manager_plugin_description.xml  hsrb_moveit_kinematics_plugin_description.xml  package.xml
catkin_ws/src/hsrb_moveit-v0.6.0-community/hsrb_moveit_plugins/hsrb_moveit_controller_manager/src/: follow_omnibase_trajectory_controller_handle.hpp  hsrb_gripper_command_controller_handle.hpp  moveit_fake_multidof_controllers.hpp
catkin_ws/src/hsrb_moveit-v0.6.0-community/hsrb_moveit_plugins/hsrb_moveit_kinematics/: CMakeLists.txt
catkin_ws/src/hsrb_moveit-v0.6.0-community/hsrb_moveit_plugins/hsrb_moveit_kinematics/src/: hsrb_moveit_kinematics.cpp  hsrb_moveit_kinematics.hpp
catkin_ws/src/hsrb_moveit-v0.6.0-community/hsrb_moveit_plugins/hsrb_moveit_kinematics/test/: hsrb_moveit_kinematics-test.cpp  hsrb_moveit_kinematics-test.test
catkin_ws/src/navigation_pumas/config_files/: CMakeLists.txt
catkin_ws/src/navigation_pumas/custom_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/navigation_pumas/exploration/: CMakeLists.txt  package.xml
catkin_ws/src/navigation_pumas/map_augmenter/: CMakeLists.txt  package.xml
catkin_ws/src/navigation_pumas/map_sparser/: CMakeLists.txt  package.xml
catkin_ws/src/navigation_pumas/mvn_pln/: CMakeLists.txt  package.xml
catkin_ws/src/navigation_pumas/navig_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/navigation_pumas/obstacle_detector/: CMakeLists.txt  package.xml
catkin_ws/src/navigation_pumas/occupancy_grid_utils/: CMakeLists.txt
catkin_ws/src/navigation_pumas/path_planner/: CMakeLists.txt  package.xml
catkin_ws/src/navigation_pumas/sensor_scan_fix/: CMakeLists.txt  package.xml
catkin_ws/src/navigation_pumas/simple_move/: CMakeLists.txt  package.xml
catkin_ws/src/publisher_meta_etapa2/: CMakeLists.txt  package.xml
catkin_ws/src/publisher_meta_etapa2/scripts/: meta_publisher.py  obj_spawner.py  rock_spawner.py
models/my_rock/: model.sdf
models/my_rock02/: model.config  model.sdf
models/my_rock02/meshes/: model.dae
models/my_rock03/: model.sdf
models/my_rock03/meshes/: model.dae
models/my_rock04/: model.sdf
models/ycb_035_power_drill/: model-1_4.sdf  model.config
models/ycb_035_power_drill/meshes/: nontextured.stl  textured.dae
models/ycb_042_adjustable_wrench/: model-1_4.sdf  model.config
models/ycb_042_adjustable_wrench/meshes/: nontextured.stl  textured.dae
models/ycb_048_hammer/: model-1_4.sdf  model.config
models/ycb_048_hammer/meshes/: nontextured.stl  textured.dae
models/ycb_077_rubiks_cube/: model-1_4.sdf  model.config
models/ycb_077_rubiks_cube/meshes/: nontextured.stl  textured.dae
notebooks/: prueba_etapa_3.ipynb
rocks_models/my_rock/: model.config  model.sdf
rocks_models/my_rock/materials/scripts/: my_rock.material
rocks_models/my_rock/my_rock/: model.config  model.sdf
rocks_models/my_rock02/: model.sdf
rocks_models/my_rock03/: model.config  model.sdf
rocks_models/my_rock04/: model.config  model.sdf
rocks_models/my_rock04/meshes/: model.dae
rocks_models/my_rockblue/: model.config  model.sdf
rocks_models/my_rockblue/meshes/: model.dae
rocks_models/my_rockgreen/: model.config  model.sdf
(+44 files in other folders)
